--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <!-- main jquery libraries / others are at the bottom-->
 <script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/modernizr.js" type="text/javascript"></script>
+
 
 </head>
 <body>
@@ -72,8 +72,8 @@
                 <img src="img/alexis.jpg" class="face" alt="">
                 <hr class="empty">
                 <p class="header-name">Prathamesh Prabhu</p>
-                <p class="header-title">Web Designer & Web Developer</p>
-                <p class="header-subtitle"><b>Hello my name is Prathamesh Prabhu</b>I am interested in working as a web developer.I have knowledge of Javascript,Jquery,Html and css</p>
+                <p class="header-title">Software Developer</p>
+                <p class="header-subtitle"><b>Hello my name is Prathamesh Prabhu</b> I am interested in working as a web developer.I have knowledge of Javascript,Jquery,Html and css</p>
             </div>
         </div>
     </div>
