Index File edit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--<![endif]-->
     
 
-<!-- Mirrored from themeforest.nazwa.pl/resume-timeline/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Jun 2015 16:33:06 GMT -->
+
 <head>
 <meta charset="utf-8">
 <meta name="description" content="description" />
@@ -25,7 +25,7 @@
 <link rel="stylesheet" media="all" href="css/bootstrap.css" type="text/css"/>
 <link rel="stylesheet" media="all" href="css/custom.css" type="text/css"/>
 
-<!-- main jquery libraries / others are at the bottom-->
+
 <script src="js/jquery.min.js" type="text/javascript"></script>
 
 
@@ -118,13 +118,13 @@
                         <span class="note">Feb 2015 - Current</span>
                         <p><strong>IT Group</strong></p>
                         <p><strong>Software Developer</strong> in Hyderabad/Mumbai, India</p>
-                        <p class="description">.</p>
+                        <p class="description">Working as a developer on sql as well as using technologies such as sqoop and python.I am currently working on performance monitoring.</p>
                     </li>
                     <li>
                         <span class="note">Nov 2013 - Feb-2015</span>
                         <p><strong>Freelance</strong></p>
                         <p><strong>Software Developer</strong> in Mumbai, India</p>
-                        <p class="description">Donec vel nulla mollis, mattis orci vel, vulputate tellus. Cras interdum sapien quis risus mattis egestas. Etiam rhoncus lacus turpis, in vulputate arcu imperdiet non.</p>
+                        <p class="description">Working as a software developer.Working on Sql and server side technologies..</p>
                     </li>
                 </ul>
             </div>
@@ -148,6 +148,11 @@
                     <li>
                         <p><strong>Hsc</strong></p>
                         <p><strong>Chinai College</strong> in Mumbai, India</p>
+                        <p class="description">Cleared my 12th standard science</p>
+                    </li>
+                    <li>
+                        <p><strong>SSC</strong></p>
+                        <p><strong>Utpal Shanghvi School</strong> in Mumbai, India</p>
                         <p class="description">Cleared my 12th standard science</p>
                     </li>
                 </ul>
@@ -239,7 +244,7 @@
                     </li>
                     <li>
                         <p><strong>Computer Games</strong></p>
-                        <p class="description">I like to play a lot of games on my computer.Some of my favourites are Grand Theft Auto series,Fifa series and Far Cry</p>
+                        <p class="description">I like to play a lot of games on my computer.Some of my favourites are Grand Theft Auto series,Fifa series and Far Cry.I have also managed playstation events in college and was a great success.</p>
                     </li>
                     <li>
                         <p><strong>Table Tennis</strong></p>
@@ -302,7 +307,7 @@
 <!-- end Contact -->
 
 <!-- Java Script -->
-<!-- Placed at the end of the document so the pages load faster -->
+
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-progressbar.js"></script>
 <script src="js/spy.js"></script>
@@ -313,5 +318,5 @@
 
 </body>
 
-<!-- Mirrored from themeforest.nazwa.pl/resume-timeline/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Jun 2015 16:33:28 GMT -->
+
 </html>
