Index File second  edit

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <li>
                         <p><strong>SSC</strong></p>
                         <p><strong>Utpal Shanghvi School</strong> in Mumbai, India</p>
-                        <p class="description">Cleared my 12th standard science</p>
+                        <p class="description">Cleared my 10th standard</p>
                     </li>
                 </ul>
             </div>
@@ -195,6 +195,18 @@
                     </li>
                     <li>
                         <p>Html/Css<span class="annotation pull-right">65%</span></p>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </li>
+                     <li>
+                        <p>Bootstrap<span class="annotation pull-right">70%</span></p>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </li>
+                     <li>
+                        <p>Git<span class="annotation pull-right">65%</span></p>
                         <div class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
